--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "prettier": "^2.0.4",
     "typescript": "^3.8.3"
   }
 }
