--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "@types/react": "^16.9.34",
     "prettier": "^2.0.4",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "next": "^9.3.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
