--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.4",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
