--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^9.3.4",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.2.0"
   }
 }
