Add sass preprocessor

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass": "^1.26.3",
     "swr": "^0.2.0"
   }
 }
