--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.2",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "@types/react-test-renderer": "^16.9.2",
+    "babel-jest": "^25.3.0",
+    "jest": "^25.3.0",
+    "jest-css-modules": "^2.1.0",
     "prettier": "^2.0.4",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
